--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "vite": "^5.2.11",
     "vite-plugin-singlefile": "^2.0.1",
     "vite-plugin-solid": "^2.10.2",
+    "vite-plugin-solid-svg": "^0.8.1",
     "youtube-player": "^5.6.0"
   },
   "devDependencies": {
