Convert to astro and bug fixes for sidebar

--- a/package.json
+++ b/package.json
@@ -1,33 +1,32 @@
 {
   "scripts": {
-    "dev": "vite",
-    "preview": "vite preview",
-    "build": "vite build"
+    "dev": "astro dev",
+    "preview": "astro preview",
+    "build": "astro build"
   },
   "type": "module",
   "dependencies": {
+    "@astrojs/solid-js": "^5.0.4",
     "@google/generative-ai": "^0.21.0",
+    "@tailwindcss/vite": "^4.0.3",
     "@token-icons/core": "^2.14.0",
-    "axios": "^1.7.7",
+    "astro": "^5.2.5",
+    "astro-relative-links": "^0.4.2",
+    "axios": "^1.7.9",
+    "clsx": "^2.1.1",
     "dayjs": "^1.11.13",
-    "highlight.js": "^11.10.0",
-    "marked": "^14.1.3",
-    "marked-highlight": "^2.2.0",
+    "highlight.js": "^11.11.1",
+    "marked": "^15.0.6",
+    "marked-highlight": "^2.2.1",
     "solid-icons": "^1.1.0",
-    "solid-js": "^1.9.2",
-    "tailwindcss": "^3.4.14",
+    "solid-js": "^1.9.4",
+    "tailwind-merge": "^3.0.1",
+    "tailwindcss": "^4.0.3",
     "unsplash-js": "^7.0.19",
-    "vite": "^5.4.9",
-    "vite-plugin-singlefile": "^2.0.2",
-    "vite-plugin-solid": "^2.10.2",
-    "vite-plugin-solid-svg": "^0.8.1",
     "youtube-player": "^5.6.0"
   },
   "devDependencies": {
-    "@types/node": "^22.7.6",
-    "@types/youtube-player": "^5.5.11",
-    "autoprefixer": "^10.4.20",
-    "cssnano": "^7.0.6",
-    "postcss": "^8.4.47"
+    "@types/node": "^22.13.1",
+    "@types/youtube-player": "^5.5.11"
   }
 }
