--- a/package.json
+++ b/package.json
@@ -6,11 +6,16 @@
   },
   "type": "module",
   "dependencies": {
+    "@ai-sdk/google": "^1.2.18",
+    "@ai-sdk/groq": "^1.2.9",
+    "@ai-sdk/openai": "^1.3.22",
+    "@ai-sdk/solid": "^1.2.13",
     "@astrojs/solid-js": "^5.0.4",
-    "@google/generative-ai": "^0.21.0",
-    "@tailwindcss/vite": "^4.0.3",
+    "@google/genai": "^0.13.0",
+    "@tailwindcss/vite": "^4.1.5",
     "@token-icons/core": "^2.14.0",
-    "astro": "^5.2.5",
+    "ai": "^4.3.16",
+    "astro": "^5.7.10",
     "astro-relative-links": "^0.4.2",
     "axios": "^1.7.9",
     "clsx": "^2.1.1",
@@ -28,5 +33,11 @@
   "devDependencies": {
     "@types/node": "^22.13.1",
     "@types/youtube-player": "^5.5.11"
+  },
+  "pnpm": {
+    "onlyBuiltDependencies": [
+      "esbuild",
+      "sharp"
+    ]
   }
 }
